test case NoSpaceLeftOnDevice  :  refacto